# ChangeLog for media-gfx/eog-plugins
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/eog-plugins/ChangeLog,v 1.9 2013/12/24 17:17:45 pacho Exp $

*eog-plugins-3.10.1 (24 Dec 2013)

  24 Dec 2013; Pacho Ramos <pacho@gentoo.org> +eog-plugins-3.10.1.ebuild,
  -eog-plugins-3.6.1-r1.ebuild, -eog-plugins-3.8.0.ebuild:
  Version bump for Gnome 3.10

  08 Dec 2013; Pacho Ramos <pacho@gentoo.org> eog-plugins-3.8.1.ebuild:
  x86 stable, bug #478252

  30 Nov 2013; Pacho Ramos <pacho@gentoo.org> eog-plugins-3.8.1.ebuild:
  amd64 stable, bug #478252

  30 Jun 2013; Gilles Dartiguelongue <eva@gentoo.org> eog-plugins-3.8.1.ebuild:
  Add missing handling of REQUIRED_USE for python.

*eog-plugins-3.8.1 (14 May 2013)

  14 May 2013; Pacho Ramos <pacho@gentoo.org> +eog-plugins-3.8.1.ebuild,
  -eog-plugins-3.4.1.ebuild:
  Version bump, drop old

*eog-plugins-3.8.0 (28 Mar 2013)

  28 Mar 2013; Pacho Ramos <pacho@gentoo.org> +eog-plugins-3.8.0.ebuild:
  Version bump for Gnome 3.8

*eog-plugins-3.6.1-r1 (26 Dec 2012)

  26 Dec 2012; Gilles Dartiguelongue <eva@gentoo.org>
  -eog-plugins-3.4.0.ebuild, +eog-plugins-3.6.1-r1.ebuild:
  Version bump for Gnome 3.6. Switch to EAPI=5 and python-single-r1.eclass.
  Clean up old revision.

*eog-plugins-3.4.1 (16 Jul 2012)

  16 Jul 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  +eog-plugins-3.4.1.ebuild:
  Version bump, fixes a crash in the exif display.

*eog-plugins-3.4.0 (14 May 2012)

  14 May 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  +eog-plugins-3.4.0.ebuild, +metadata.xml:
  New package with official eog plugins (bug #389413, thanks to Christian
  Strahl for reporting).