@@ -3,14 +3,14 @@ Hash: SHA256
 
 DIST eog-plugins-3.10.1.tar.xz 349376 SHA256 d5b32c49dbf1e0b6cf56c9fdc6c19186c92e98d92b71aa98805491e2bb2f8e12 SHA512 eff81af98a8227bfd23de93c4b79fbb0e3723560737744a9c18210670457e62661abb55ad0f8e6a1df5b3f1d9a3b1705db3701981e26d0a8035b79365f7a9292 WHIRLPOOL a7d429d231b039da298fa10ed2701c0be93e19584af734cb732cd4b12b9ad28e6778b370c1726f33b89d124744a585849737ec2ff9da7ad38d32b97c4ff434ec
 DIST eog-plugins-3.8.1.tar.xz 346504 SHA256 5cf8dab5b6622b9e712da4094185112cc84baa96f2775cc76bf654b1c443cfb9 SHA512 572427e3f77e64333fa10c0a69854e9291e766c97a02ccd86b7602ecb86bd3719e20850634397958917e9ab6c85877298936069ca972a2a3173ffccf46c9d33e WHIRLPOOL 46d16380ac153c5249e0eced7828c334b4277d9f19d69f3f5ed200a78fe02cdf5bb3f21db41af0dcc7878627f4388442da4e7d0bb180007aae6801d8f0521cbf
-EBUILD eog-plugins-3.10.1.ebuild 1761 SHA256 c4fd849641c7542b4204462adc4e40329548784748cdf0ac5b5e8eedefedda64 SHA512 abcf88ca6d836d4bc5dbbf35e61be407b81614ca3cc7386d9253c05b9905aa35ff1ce5e8900859e4d00019f916bb2f393aa4902533549a9de8b3e79a4a896d70 WHIRLPOOL 4c994bbcd1c94ce06a7886b4edc88caa6b4d0002f60d53a85b859ced64384403e264dcf2e500cb12fe07012d700f8cfc24fd7f87111507c683f6c0e74dc6eb15
-EBUILD eog-plugins-3.8.1.ebuild 1758 SHA256 72fa827e612739ce59788dae10bf6c86de6309dbc7e1d0a3fe5095d0d8ff22fe SHA512 d043825f6c2b5e569e8e370bc1155586fae26aeab1ff002bddd3787e3b6e047916d96ac6a1a14b5eb31cd76e60af9d25eab63170671dbf132e6508f4fe992683 WHIRLPOOL 1f56bf54a517d7b9e41503f81bfcd0a4102067281b431563a8f62549538242dd7fa763eb75f837ecf6d4385e4a9acdee77f2700715c432f45d81230ce4917ed6
-MISC ChangeLog 1706 SHA256 d5565aba27e89a60b814f797ffde491bd7c16a7575b7d70a3b65b77962f9b7e6 SHA512 aea032060668ee021cfc3e53d2e6479cdaad2429030684daed7b85fae09c2229a92e80c76945daadd04422c18ca2d5713096242f417a00fdd97cf9a26959b561 WHIRLPOOL 32cd667539c02469d08ba3cc7e0de838129116637412be084b38a13aecd2ef79065b24e7a46ba40f7ca436d4f4450691588814cf1bba84020bb4f2310457c281
+EBUILD eog-plugins-3.10.1.ebuild 1757 SHA256 2b085e83f16aba660af87120f5949917bdbb21ba650e9340a8a7f07ea24944c0 SHA512 63eb63ce2c5dcb557f836c6e2fdebd08889ce1e8af346a3da0490510be6d8677dd63247885e2350f6d5efa9ac631f1a9c4efbbbe44a7b426becbc5265593c32b WHIRLPOOL 5a80932fa356a24d0e9ace6757ea50c35e8e974c923f7cd19c4735493473b352cda28e4c80df72210494c0816ec49a01f8245b40c1efaff99a624361cbfdeba4
+EBUILD eog-plugins-3.8.1.ebuild 1754 SHA256 d0bcfbd4e83a03a39b97c05b6ced68551aa96a166602119e3e0aebb360141f76 SHA512 5f25081c940ab151a7c2ae6a115fc7318a5821de9ad7b2066455cd625072433eeacdf600d6c0b3ffe627c9edf1782787f492956e7fe7b9301bd543cecb4fec40 WHIRLPOOL 8eb7457dbb04757bb87be8d40786ff0bfa106e9f157299def212de507c19e63d947aff147cb1de6ddbf84a40ba8a3d38744caddd84df396dca41393537bcbe09
+MISC ChangeLog 1853 SHA256 2e78b41f4ec3fd242f5effcf0ba6c97169e39c6f341f8bd14d3847781ebef8d5 SHA512 6c520f60ad23a7c2e9cd498873f600243a0b4f8cfc5b113703fb8a23e026d97b597859ed8e29371d4ed5e1cd5118c5a7df1d3fc564b7084ef1ffa96ff66d508a WHIRLPOOL 3eed99a0a6773c13c83252acd43ce6775a4fed9206d6310eceb9ef74859a6712bd6bd41d4cd9107da4e91b291ed0a8a11d77eac78b357df94d0f7b1a444c636d
 MISC metadata.xml 392 SHA256 05a1968f0920b51d3abd11acb3f11ba6d2badd66482016bcf777d34c825781db SHA512 e5af450d68431727fdf1536b4d58f6960e012e28cabad7cdf98b18c55db7fed6386b2b2916476e5a3cb3fa2fb2dcfe47ab870e2f14b5bf2555d0ef6978c61a62 WHIRLPOOL 515a4f54ec4e17503543e2559a5b5487d27532b23ed048e611cb0e578c2026ae763799f46e1a80be001cf4e1fabcb5ac09811deb42182ff10a88b39c170d9d7c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlK5wboACgkQCaWpQKGI+9QxXgCeM9bR1/7U1nCqFRXTfEnVW9IL
-IrwAn0EXZDD7CI7b6xUIuSFdp5gUo8/J
-=FaJ+
+iEYEAREIAAYFAlK65BcACgkQCaWpQKGI+9SMhACfU56Gh3ESUX4JjGGwT3TdYS1K
+fpcAnj96jrU3HTPYJjWSvR/ILST4z8nq
+=k6hb
 -----END PGP SIGNATURE-----
