@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/eog-plugins
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/eog-plugins/ChangeLog,v 1.9 2013/12/24 17:17:45 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/eog-plugins/ChangeLog,v 1.10 2013/12/25 13:56:38 pacho Exp $
+
+  25 Dec 2013; Pacho Ramos <pacho@gentoo.org> eog-plugins-3.10.1.ebuild,
+  eog-plugins-3.8.1.ebuild:
+  libpeas support for python2.6 was dropped
 
 *eog-plugins-3.10.1 (24 Dec 2013)
 
